Article style commit

--- a/style.css
+++ b/style.css
@@ -63,6 +63,22 @@ p {
   width: 435px;
 }
 
+  .post {
+
+  }
+
+    .post-header {
+
+    }
+
+      .post-header h2 {
+
+      }
+
+      .post-meta {
+        
+      }
+
 /* sidebar */
 
 #sidebar {
