--- a/style.css
+++ b/style.css
@@ -95,7 +95,24 @@ p {
         margin-left: 115px;
       }
 
+/* navigation */
 
+.navigation {
+  overflow: 10px 0;
+  font-size: 12px;
+  margin-bottom: 15px;
+}
+
+  .prev {
+    float: left;
+    width: 200px;
+  }
+
+  .next {
+    float: right;
+    width: 200px;
+    text-align: right;
+  }
 
 /* sidebar */
 
@@ -104,13 +121,16 @@ p {
   width: 150px;
 }
 
-  .widget h3 {
-    font-weight: bold;
+  .widget {
+    margin-bottom: 25px;
   }
+    .widget h3 {
+      font-weight: bold;
+    }
 
-  .widget li {
-    line-height: 1.8;
-  }
+    .widget li {
+      line-height: 1.8;
+    }
 
 /* footer */
 
